# url_encoded_data

./: Cargo.toml  LICENSE  README.md  extract_doc_from_lib.rs.sh  script_before_publish.sh
.github/workflows/: rust.yml
examples/: mutating_example.rs  simple_example.rs
src/: lib.rs
