[package]
name = "url_encoded_data"
version = "0.1.0"
authors = ["darkdarkfruit <darkdarkfruit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = "0.4.13"
url = "2.2.0"
anyhow = "1.0.38"


[dev-dependencies]
maplit = "1.0.2"
